--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -1,3 +1,18 @@
-<div class="mt-3">
+{{!-- <div class="">
+    {{user.name}}
+</div> --}}
+<div>
 
+    <p>
+        {{{news.content}}}
+    </p>
+
+</div>
+
+<div>
+    {{#each member}}
+    <p>
+        {{this.price}}
+    </p>
+    {{/each}}
 </div>
