--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container color_white">
         <img src="/img/logo.jpg" alt="" width="34" height="34" class="d-inline-block align-text-top">
-        <a class="navbar-brand navbar_brand__fontSize text-white" href="/">Edu Fitness</a>
+        <a class="navbar-brand navbar_brand__fontSize text-white" href="/news">Edu Fitness</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
