--- a/src/resource/views/layouts/login.hbs
+++ b/src/resource/views/layouts/login.hbs
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edu Fitness</title>
     <link rel="icon" href="/img/logo.jpg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/app.css">
 </head>
 
@@ -19,9 +21,6 @@
                     <button class="signinBtn">
                         Login
                     </button>
-                    <a href="/home">
-                        login
-                    </a>
                 </div>
                 <div class="box signup">
                     <h2>Don't Have An Account ?</h2>
@@ -32,14 +31,17 @@
             </div>
             <div class="container_login__form-formBx">
                 <div class="form signinForm">
-                    <form action="">
+                    <form action="/login" method="POST">
                         <label class="form_label" for="username">
                             Login
                         </label>
-                        <input class="form_input" type="text" id="username" name="username" placeholder="User Name">
+                        <input class="form_input" type="email" id="email" name="email" placeholder="your email">
                         <label class="form_label" for="password">
                         </label>
                         <input class="form_input" type="password" id="password" name="password" placeholder="Password">
+                        <label class="form_label__text valid-text" for="message">
+                            {{>messages}}
+                        </label>
                         <button class="form_button" type="submit">
                             Login
                         </button>
@@ -47,25 +49,27 @@
                 </div>
                 {{!-- signup --}}
                 <div class="form signupForm">
-                    <form action="">
+                    <form action="/register" method="POST">
                         <h3 class="form_label">
-                            Sign Up
+                            Register
                         </h3>
                         <label class="form_label__text" for="username">
                         </label>
-                        <input class="form_input" type="text" id="username" name="username" placeholder="User Name">
+                        <input class="form_input" type="text" id="name" name="name" placeholder="User Name">
                         <label class="form_label__text" for="email">
                         </label>
                         <input class="form_input" type="email" id="email" name="email"
                             placeholder="YourEmail@gmail.com">
                         <label class="form_label__text" for="password">
                         </label>
-                        <input class="form_input" type="password" id="password" name="password" placeholder="Password">
-                        <label class="form_label__text" for="conPassword">
-
+                        <input class="form_input" type="password" id="password1" name="password" placeholder="Password">
+                        <label class="form_label__text" for="password">
                         </label>
                         <input class="form_input" type="password" id="conPassword" name="conPassword"
                             placeholder="Confirm Password">
+                        <label class="form_label__text" for="message">
+                            {{>messages}}
+                        </label>
                         <button class="form_button__register" type="submit">
                             Register
                         </button>
@@ -88,6 +92,20 @@
         formBx.classList.remove('active');
         containerLogin.classList.remove('active');
     };
+    // validate
+    function validate() {
+        //let password = document.querySelector('#password');
+        console.log('1234');
+    };
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+    integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+    integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+    crossorigin="anonymous"></script>
 
 </html>
