--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'base';
+@import url('https://fonts.googleapis.com/css2?family=Manrope&family=Sora:wght@300&display=swap');
 a:hover{
     text-decoration: none;
 }
@@ -118,6 +119,11 @@ a:hover{
     max-height: 200px;
     width: 100%;
     object-fit: fill;
+    transition: all 0.2s ease-in-out;
+    &:hover{
+        box-shadow: 0 18px 32px -18px $color_dark;
+        transform: translateY(-4px);
+    }
 }
 .layout_slide{
     &__img{
@@ -137,6 +143,18 @@ a:hover{
     overflow: hidden;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
+}
+.color_text{
+    color: $text_color ;
+}
+.text_gray{
+    color: $gray_color;
+    &__author{
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: flex-end;
+        font-size: 0.8rem;
+    }
 }
 
 // login 
