--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -1,18 +1,32 @@
-{{!-- <div class="">
-    {{user.name}}
-</div> --}}
-<div>
-
-    <p>
-        {{{news.content}}}
-    </p>
-
-</div>
-
-<div>
-    {{#each member}}
-    <p>
-        {{this.price}}
-    </p>
-    {{/each}}
+<div class="mt-3">
+    <div class="row">
+        <div class="col-sm-12 col-md-9">
+            <h2 class="mb-3">Science News</h2>
+            <div class="row">
+                {{#each news}}
+                <div class="col-md-6 mb-3">
+                    <div class="card">
+                        <div class="card-header color_text truncate_text">
+                            {{this.title}}
+                        </div>
+                        <a href="/news/{{this.slug}}" class="img_link">
+                            <img src="/upload/images/{{this.image}}" class="card-img-top img-fluid layout_news__img"
+                                alt="this is image">
+                        </a>
+                        <div class="card-body">
+                            <p class="card-text">
+                                Author : <span class="text_gray">
+                                    {{this.author}}
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                {{/each}}
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-3">
+            <h2 class="mb-3">ADS banner</h2>
+        </div>
+    </div>
 </div>
